@@ -2,5 +2,5 @@
 
 #include <QtCore/QVersionNumber>
 
-#define VERSION     QVersionNumber(1, 0, 1)
-#define VERSION_STR "1.0.1"
+#define VERSION     QVersionNumber(1, 0, 2)
+#define VERSION_STR "1.0.2"
