@@ -1,0 +1,11 @@
+ <html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8"> 
+        <meta http-equiv="Content-Language" content="zh-CN">
+        <title>%1</title>
+    </head>
+    <body>
+        <h1 align="center">%1</h1>
+%2
+    </body>
+</html>
