@@ -1,3 +1,5 @@
+#include <sstream>
+
 #include <QtCore/QDebug>
 #include <QtCore/QDir>
 #include <QtCore/QFile>
@@ -6,6 +8,8 @@
 #include <QtCore/QJsonObject>
 #include <QtCore/QJsonValue>
 
+#include <game_data/game_data.h>
+#include <locale/string_table.h>
 #include <save/save.h>
 
 /// Current version.
@@ -241,6 +245,87 @@ bool Save::write(const QString &path)
 
     m_path = QDir(".").absoluteFilePath(path);
 
+    return true;
+}
+
+/**
+ * @brief		Write html file.
+ */
+bool Save::writeHTML(const QString &path, const QString &title)
+{
+    // Open file.
+    QFile file(QDir(".").absoluteFilePath(path));
+    if (! file.open(QIODevice::OpenModeFlag::WriteOnly)) {
+        return false;
+    }
+
+    QFile templateFile(":/HTML/template.html");
+    if (! templateFile.open(QIODevice::OpenModeFlag::ReadOnly)) {
+        qFatal("Resource error.");
+        return false;
+    }
+    QString templateStr = templateFile.readAll();
+
+#define INDENT "    "
+    ::std::ostringstream ss;
+    ss << INDENT << INDENT << "<table border=\"1\" align=\"center\">\n";
+
+    // Header.
+    ss << INDENT << INDENT << INDENT << "<tr align=\"right\">\n";
+    ss << INDENT << INDENT << INDENT << INDENT
+       << QString("<th>%1</th><th>%2</th><th>%3</th>\n")
+              .arg(STR("STR_HTML_GROUP"))
+              .arg(STR("STR_HTML_STATIOM_MODULE"))
+              .arg(STR("STR_HTML_AMOUNT"))
+              .toStdString();
+    ss << INDENT << INDENT << INDENT << "</tr>\n";
+
+    // Groups.
+    auto gameData           = GameData::instance();
+    auto gameTexts          = gameData->texts();
+    auto gameStationModules = gameData->stationModules();
+    for (auto &group : m_groups) {
+        for (int i = 0; i < group->modules().size(); ++i) {
+            auto module = group->module(i);
+            if (i == 0) {
+                ss << INDENT << INDENT << INDENT << "<tr align=\"right\">\n";
+                ss << INDENT << INDENT << INDENT << INDENT
+                   << QString(
+                          "<td rowspan=\"%1\">%2</td><td>%3</td><td>%4</td>\n")
+                          .arg(group->modules().size())
+                          .arg(group->name())
+                          .arg(gameTexts
+                                   ->text(gameStationModules
+                                              ->module(module->module())
+                                              ->name)
+                                   .toHtmlEscaped())
+                          .arg(module->amount())
+                          .toStdString();
+                ss << INDENT << INDENT << INDENT << "</tr>\n";
+
+            } else {
+                ss << INDENT << INDENT << INDENT << "<tr align=\"right\">\n";
+                ss << INDENT << INDENT << INDENT << INDENT
+                   << QString("<td>%1</td><td>%2</td>\n")
+                          .arg(gameTexts
+                                   ->text(gameStationModules
+                                              ->module(module->module())
+                                              ->name)
+                                   .toHtmlEscaped())
+                          .arg(module->amount())
+                          .toStdString();
+                ss << INDENT << INDENT << INDENT << "</tr>\n";
+            }
+        }
+    }
+
+    ss << INDENT << INDENT << "</table>\n";
+#undef INDENT
+
+    file.write(
+        templateStr.arg(title.toHtmlEscaped()).arg(ss.str().c_str()).toUtf8());
+
+    file.close();
     return true;
 }
 
