@@ -1,5 +1,6 @@
 v1.0.2
-    Fix the bug that the amount of modules is incorrect when pasting modules.
+    Fixed the bug that the amount of modules is incorrect when pasting modules.
+    Added new function to export the lists of modules to .html files.
 
 v1.0.1
     Fixed a bug that the amount of station module cannot be changed after changing the order of the station module.
